--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -15,6 +15,10 @@
     height: 100vh;
 }
 
+.ms_bg-grey {
+    background-color: #757575;
+}
+
 /*************************************************
     TEXT UTILITES
  *************************************************/
@@ -26,9 +30,20 @@
     font-weight: 600;
 }
 
+.ms_fw-700 {
+    font-weight: 700;
+}
+
 /*************************************************
     UTILITES
  *************************************************/
 .ms_border-color {
     border: 2px solid #d05d81;
+}
+
+/*************************************************
+    DISPLAY NONE
+ *************************************************/
+#hidden_ticket {
+    display: none;
 }
